sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value getNombreValue
  var count : Int = getNombreValue;
                    ^